--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^8.0.1",
     "fontsource-roboto": "^4.0.0",
     "html-webpack-plugin": "^4.5.2",
     "react": "^17.0.2",
